Fixing POST and PUT methods, so they can get the body request and validate it
